--- a/WebContent/WEB-INF/templates/listPartyPics.html
+++ b/WebContent/WEB-INF/templates/listPartyPics.html
@@ -23,8 +23,8 @@
 
 	<!---------------------------SIDEBAR CONTENT --------------------------------------->
 
-	<div class="app-body" style="border-right: 1px solid;">
-		<div class="sidebar">
+	<div class="app-body">
+		<div class="sidebar" style="border-right: 1px solid;">
 			<!-- Sidebar content here -->
 
 			<div th:include="~{includes/sidebar :: sidebar}"></div>
