--- a/WebContent/WEB-INF/templates/showUserProfile.html
+++ b/WebContent/WEB-INF/templates/showUserProfile.html
@@ -68,6 +68,7 @@ em, strong {
 			</div>
 			<div class="card-footer text-center">
 				<a class="btn btn-dark" th:href="@{/}">Home </a>
+				<a class="btn btn-warning cui-wrench" th:href="@{/changeUser(id=${user.id})}"> Edit </a>
 			</div>
 		</div>
 
