--- a/WebContent/WEB-INF/templates/addComment.html
+++ b/WebContent/WEB-INF/templates/addComment.html
@@ -16,18 +16,14 @@
 
 			<div class="col-md-8 col-md-offset-2 mx-auto">
 				<form class="form-horizontal" method="post"
-					th:action="createComment">
+					th:action="${comment} ? @{/changeComment(id=${comment.id})} : @{/createComment}">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
-					
-					
-					
-					
-					
+
 					
 					<div class="card text-dark">
 						<div class="bg-dark card-header">
-							<strong th:text="'New Comment'">New Comment</strong>
+							<strong th:text="${comment}? 'Change Comment' : 'New Comment'"></strong>
 
 						</div>
 						<div class="card-body">
@@ -38,7 +34,7 @@
 								Text </label>
 							<div class="col-md-10">
 								<input class="form-control" type="text" name="commentText"
-									th:value="${commentText}"
+									th:value="${comment} ? ${comment.text}"
 									placeholder="What comes to your mind ? ">
 							</div>
 						</div>
