--- a/WebContent/WEB-INF/templates/editFlat.html
+++ b/WebContent/WEB-INF/templates/editFlat.html
@@ -14,44 +14,66 @@
 	rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-dark">
 	<div class="container" role="main">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<form class="form-horizontal" method="post"
-					th:action="${flat} ? @{/changeFlat(id=${flat.id})} : @{/createNewFlat}">
-					<!--<input type="hidden" th:name="${_csrf.parameterName}"
+		<div class="col-md-8 col-md-offset-2 mx-auto">
+			<form class="form-horizontal" method="post"
+				th:action="${flat} ? @{/changeFlat(id=${flat.id})} : @{/createNewFlat}">
+				<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
-					<fieldset>
-						<legend th:text="${flat}? 'Change Flat' : 'New Flat'">New
-							Flat</legend>
 
-						<!-- --------------  Name ---------------- -->
-						<div class="form-group">
-							<label for="flatName" class="col-md-2 control-label">
-								Name </label>
-							<div class="col-md-10">
-								<input class="form-control" type="text" name="name"
-									th:value="${flat} ? ${flat.name}">
+
+
+
+
+
+
+				<div class="card text-dark">
+					<div class="bg-dark card-header">
+						<strong th:text="${flat}? 'Change Flat' : 'New Flat'">New
+							Flat</strong>
+
+					</div>
+					<div class="card-body">
+						<div class="float-left container">
+
+							<div class="form-group">
+								<label for="flatName" class="col-md-2 control-label">
+									Name </label>
+								<div class="col-md-10">
+									<input class="form-control" type="text" name="name"
+										th:value="${flat} ? ${flat.name}">
+								</div>
 							</div>
+
+
+
 						</div>
+					</div>
+				</div>
 
-					
 
 
 
-						<!-- --------------  buttons ---------------- -->
-						<div class="form-group">
-							<div class="col-md-10 col-md-offset-2">
-								<button type="submit" class="btn btn-primary">Submit</button>
-								<a href="listFlat" class="btn btn-default"> Cancel </a>
-							</div>
-						</div>
 
-					</fieldset>
-				</form>
-			</div>
+
+
+
+
+
+
+				<!-- --------------  buttons ---------------- -->
+				<div class="form-group">
+					<div class="col-md-10 col-md-offset-2">
+						<button type="submit" class="btn btn-primary">Submit</button>
+						<a href="listFlat" class="btn btn-default"> Cancel </a>
+					</div>
+				</div>
+
+				</fieldset>
+			</form>
 		</div>
+	</div>
 
 	</div>
 	<!--  End of container -->
