--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -1,10 +1,10 @@
 
 <nav th:fragment="search" class="navbar navbar-inverse navbar-fixed-top bg-dark ">
-	<div class="container-fluid" style="border-bottom: 1px solid">
+	<div class="container-fluid" >
 		<!-- HTML form with search textbox and submit button-->
 		
 		<form class="navbar-form navbar-left">
-			<a style="color:white; font-size:200%;" th:href="@{/}"> COMMUNE-IC8</a>		
+			<a style="color:white; font-size:200%; text-decoration:none;" th:href="@{/}"> COMMUNE<span class="text-secondary">-</span><span class="text-primary">IC8</span></a>		
 		</form>
 		
 		
