--- a/WebContent/WEB-INF/templates/listFlat.html
+++ b/WebContent/WEB-INF/templates/listFlat.html
@@ -115,7 +115,7 @@
 					<ul class="nav">
 						<li class="nav-title">Options</li>
 
-						<li sec:authorize="hasRole('ADMIN')" class="nav-item"><a
+						<li sec:authorize="hasRole('ROLE_ROOT')" class="nav-item"><a
 							class="nav-link" th:href="@{/editFlat}"> <i
 								class="nav-icon cui-location-pin"></i> Create New Flat
 						</a></li>
